--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
   <head>
-    <title>{Neel Patel} Home Page</title>
+    <title>Neel's Home Page</title>
   </head>
   <body>
-    <h1>{STUDENT NAME}</h1>
+    <h1>Neel Patel</h1>
     <h2>CSC 394</h2>
+    <h3>Major: Computer Science</h3> 
   </body>
 </html>
